--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-APP_NAME=Random 
-APP_ENV=local
-APP_KEY=base64:Bsi5hcAPuZaEQP8vnhhkYdknrpwOR2HPOxctereSqGg=
+APP_NAME=
+APP_ENV=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=randoms
-DB_USERNAME=root
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
