--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:c1H0BaqlvmyJXPj6DdW92P18Q5X5anHNKHnGLX18yco=
 APP_DEBUG=true
 APP_URL=http://localhost
 
