Removed post-autoload-dump script

--- a/composer.json
+++ b/composer.json
@@ -48,10 +48,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "composer dump-autoload"
-        ],
+        "post-autoload-dump": [],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
